--- a/draft-scenarios/clash/dragnarok.tex
+++ b/draft-scenarios/clash/dragnarok.tex
@@ -64,27 +64,27 @@ The player with the most Victory Points (VP) wins. In case of a tie, the player 
 \end{itemize}
 \textbf{\nth{6} Round:}
 \begin{itemize}
-  \item Remove all Far (II–III) map tiles.
+  \item Remove all Far (II–III) map Tiles.
 \end{itemize}
 \textbf{\nth{9} Round:}
 \begin{itemize}
-  \item Remove all Near (IV–V) map tiles.
+  \item Remove all Near (IV–V) map Tiles.
 \end{itemize}
 \textbf{\nth{11} Round:}
 \begin{itemize}
-  \item Remove all Starting (I) map tiles.
+  \item Remove all Starting (I) map Tiles.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
   \item Players may not recruit Secondary Heroes.
-  \item Players may use their M\&M deck while paying to defend their Town.
-  \item If a Hero stand on a removed tile, move them to the nearest revealed Field and reduce their lowest initiative Unit's \svg{health} to 0. That player suffers -1 \svg{movement} this Round.
+  \item Players may use their M\&M Deck while paying to defend their Town.
+  \item If a Hero stand on a removed Tile, move them to the nearest revealed Field and reduce their lowest initiative Unit's \svg{health} to 0. That player suffers -1 \svg{movement} this Round.
   \item Level VII Neutral Combats cannot be skipped.
 \columnbreak
   \item \textbf{Dragon Utopia:} Gain 10 \svg{gold}, 1\svg{valuables} and Search(2)\svg{artifacts} twice.
   \item \textbf{Obelisk:} Roll 1 \svg{resource} or \svg{treasure}.
-  \item When tiles are removed, reduce any production provided by mines or settlements on that tile.
+  \item When Tiles are removed, reduce any production provided by mines or settlements on that Tile.
   \item Remove "Astrologers proclaim week of the magic tortoise from the Astrologers Proclaim Deck.
 \end{itemize}
 \end{multicols*}
